<resources>
    <string name="app_name">MyMap</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="around_me">Around Me</string>
    <string name="text_search">Text Search</string>
    <string name="range">Range</string>
    <string name="deleteAllFavourites">Delete All Favourites</string>
    <string name="exit">Exit</string>
    <string name="you_want_delete_all_favourites">You Want Delete All Favourites</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="km">km</string>
    <string name="miles">miles</string>
    <string name="radius_of_your_search">Radius of Your Search:</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="delete">Delete</string>
    <string name="delete_a_place">Delete a Place?</string>
</resources>
