<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="250dp"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/dialogRange">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/radius_of_your_search"
        android:textSize="25sp" />

    <SeekBar
        android:id="@+id/seekBarRange"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:max="5"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroupRange">

        <TextView
            android:id="@+id/textViewRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginRight="10dp"/>

        <RadioButton
            android:id="@+id/radioButtonKm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:checked="true"
            android:text="@string/km"
            android:textAllCaps="false"
            android:textSize="20sp" />


        <RadioButton
            android:id="@+id/radioButtonMiles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miles"
            android:textAllCaps="false"
            android:textSize="20sp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/buttonRangeCancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:onClick="buttonRangeCancel_onClick"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/buttonRangeOk"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:onClick="buttonRangeOk_onClick"
            android:layout_marginLeft="10dp"
            android:text="@string/ok"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>